objects/Property__c.object
<CustomObject>
    <description>&lt;PRO&gt; - Used to capture the list of Scentre Group Shopping Centres</description>
    <fields>
        <fullName>ActualRentableArea__c</fullName>
        <label>Actual Rentable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualUsableArea__c</fullName>
        <label>Actual Usable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AirConditioningArea__c</fullName>
        <description>This field is used to store Air Con area which is used to calculate the rates of DS products displayed in ACT and SA Proerties.</description>
        <label>Air Conditioning Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicableOutgoings__c</fullName>
        <label>Applicable Outgoings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutgoingProducts</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignmentSolicitorThreshold__c</fullName>
        <label>Assignment Solicitor Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BUDSUserID__c</fullName>
        <label>BUDS User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountAddress__c</fullName>
        <label>Bank Account Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountName__c</fullName>
        <label>Bank Account Name</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <label>Bank Account Number</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankBSB__c</fullName>
        <label>Bank BSB</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Bank Name)</relationshipLabel>
        <relationshipName>BankName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CentreType__c</fullName>
        <label>Centre Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Sub-regional</fullName>
                </value>
                <value>
                    <fullName>CBD</fullName>
                </value>
                <value>
                    <fullName>Supermarket centres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommanMallArea__c</fullName>
        <description>This field is used to store Comman Mall area which is used to calculate the rates of DS products displayed in ACT and SA Proerties.</description>
        <label>Comman Mall Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommercialCommunicationsFooter__c</fullName>
        <description>Stores the footer for commercial opportunities.</description>
        <label>Commercial Communications Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ConstructionCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Construction Company)</relationshipLabel>
        <relationshipName>ConstructionCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CorporateWebsite__c</fullName>
        <inlineHelpText>Corporate website for retailers, investors</inlineHelpText>
        <label>Corporate Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerWebsite__c</fullName>
        <inlineHelpText>Customer Facing Website</inlineHelpText>
        <label>Customer Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DAClause__c</fullName>
        <inlineHelpText>For Retail Admin Use Only.</inlineHelpText>
        <label>DA Clause</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DISCheckPropertyName__c</fullName>
        <formula>OR(Name=&quot;Carousel&quot;,Name=&quot;Innaloo&quot;,Name=&quot;Innaloo Megacentre&quot;,Name=&quot;Whitford City&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DIS_Check_Property_Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DesignCompanion__c</fullName>
        <description>It&apos;s part of the proposal pack to be sent to retailer</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Design Companion</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DesignCriteriaKiosk__c</fullName>
        <description>It&apos;s part of proposal pack to be sent to retailer. This is only displayed when space&apos;s type is Kiosk and status is not Project</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Design Criteria - Kiosk</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DesignCriteriaProject__c</fullName>
        <description>It&apos;s part of proposal pack to be sent to retailer. This is only displayed when space&apos;s status is Project</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Design Criteria - Project</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DesignCriteriaShop__c</fullName>
        <description>It&apos;s part of proposal pack to be sent to retailer. This is only displayed when space&apos;s type is Shop and status is not Project</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Design Criteria - Shop</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DesignCriteria__c</fullName>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Design Criteria</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DexusProperty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dexus Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Form__c</fullName>
        <label>Direct Debit Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DraftLease__c</fullName>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Draft Lease</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ExtendedTradePSM__c</fullName>
        <label>Extended Trade PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FitoutRequirementsProject__c</fullName>
        <description>It&apos;s part of proposal pack to be sent to retailer. This is only displayed when space&apos;s status is Project</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Fitout Requirements - Project</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FitoutRequirements__c</fullName>
        <description>It&apos;s part of proposal pack to be sent to retailer. This is only displayed when space&apos;s status is not Project</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Fitout Requirements</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FloorPlan__c</fullName>
        <description>It&apos;s part of proposal pack to be sent to retailer.</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Floor Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GLA_Air_Con__c</fullName>
        <label>GLA Air Con</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLA_Outgoings__c</fullName>
        <label>GLA Outgoings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLA_Rates_and_Taxes__c</fullName>
        <label>GLA Rates and Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLA__c</fullName>
        <inlineHelpText>Gross Lettable Area</inlineHelpText>
        <label>GLA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthSafetyGuide__c</fullName>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Health &amp; Safety Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HoardingRequirement__c</fullName>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Hoarding Requirement</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HoldingCompaniesName__c</fullName>
        <description>This field is used to store conactinated holding company name from propery ownership records.</description>
        <label>Holding Companies Name</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JDEPropertyNumber__c</fullName>
        <externalId>true</externalId>
        <label>JDE Property Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandDescription__c</fullName>
        <inlineHelpText>Retail Admin Use Only.</inlineHelpText>
        <label>Land Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeaseSolicitorThreshold__c</fullName>
        <label>Lease Solicitor Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeasingGGM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Properties (Leasing GGM)</description>
        <label>Leasing GGM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LeasingGMMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeasingGM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Properties (Leasing GM)</description>
        <label>Leasing GM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeasingRM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Drives reporting. To be manually updated.</description>
        <label>Leasing RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATAmount__c</fullName>
        <inlineHelpText>Maximum Annual Turnover For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>MAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MATAmountmil__c</fullName>
        <label>MAT Amount ($mil)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATFoodPSM__c</fullName>
        <inlineHelpText>Maximum Annual Turnover For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>MAT Food PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MATNonFoodPSM__c</fullName>
        <inlineHelpText>Maximum Annual Turnover For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>MAT Non-Food PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MATServicesPSM__c</fullName>
        <inlineHelpText>Maximum Annual Turnover For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>MAT Services PSM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MATVariance__c</fullName>
        <label>MAT % Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MajorTenantsList__c</fullName>
        <inlineHelpText>For Retail Admin Use Only.</inlineHelpText>
        <label>Major Tenants List</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MiscellaneousSolicitorThreshold__c</fullName>
        <label>Miscellaneous Solicitor Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofShops__c</fullName>
        <inlineHelpText>For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>No of Shops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofStorages__c</fullName>
        <inlineHelpText>For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>No of Storages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofTenantParkingBays__c</fullName>
        <inlineHelpText>For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>No of Tenant Parking Bays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OperatingExpenses__c</fullName>
        <description>Used to merge the operating expenses details for the Property into the Disclosure Statement Document. This field is only visible for System Admins and Business Support Users.</description>
        <label>Operating Expenses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OperatingHours__c</fullName>
        <inlineHelpText>For Retail Admin Use Only.</inlineHelpText>
        <label>Operating Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OutgoingsArea__c</fullName>
        <description>This field is used to store Outgoings area which is used to calculate the rates of DS products displayed in ACT and SA Proerties.</description>
        <label>Outgoings Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSM_Sunday_Trade_Air_Con__c</fullName>
        <label>$PSM Sunday Trade Air Con</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSM_Sunday_Trade_Outgoings__c</fullName>
        <label>$PSM Sunday Trade Outgoings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Properties (PriceBook)</relationshipLabel>
        <relationshipName>PropertiesPriceBook</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectCentreEmailAlt__c</fullName>
        <label>Project Centre Email Alt</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProjectCentreEmail__c</fullName>
        <label>Project Centre Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PropertyAddress__c</fullName>
        <formula>PropertyStreet__c &amp; BR() &amp; PropertyCity__c &amp; BR() &amp;  PropertyState__c  &amp; BR() &amp; PropertyPostcode__c  &amp; BR() &amp;  Text(Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyCity__c</fullName>
        <label>Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyMgtCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Mgt Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Property Mgt Company)</relationshipLabel>
        <relationshipName>PropertyMgtCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PropertyOwnershipType__c</fullName>
        <label>Property Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OwnershipType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PropertyPostcode__c</fullName>
        <label>Property Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyShortName__c</fullName>
        <label>Property Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyState__c</fullName>
        <label>Property State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyStatus__c</fullName>
        <label>Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PropertyStreet__c</fullName>
        <label>Property Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicHoliday__c</fullName>
        <formula>CASE(Name, 
&quot;Airport West&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Casey Central&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Doncaster&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Fountain Gate&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Geelong&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Knox&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Knox Ozone&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Knox City Office Tower&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Plenty Valley&quot;, &quot;AFL Grand Final day,&quot;,
&quot;Southland&quot;, &quot;AFL Grand Final day,&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Holiday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatesandTaxesArea__c</fullName>
        <description>This field is used to store Rates and Taxes Area which is used to calculate the rates of DS products displayed in ACT and SA Proerties.</description>
        <label>Rates and Taxes Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redbook__c</fullName>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Redbook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RegionOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RegionOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegionalCategory2__c</fullName>
        <label>Regional Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QLD Managed</fullName>
                </value>
                <value>
                    <fullName>SA Managed</fullName>
                </value>
                <value>
                    <fullName>VIC Managed</fullName>
                </value>
                <value>
                    <fullName>NSW Managed2</fullName>
                </value>
                <value>
                    <fullName>NSW Managed1</fullName>
                </value>
                <value>
                    <fullName>WA Managed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionalCategory__c</fullName>
        <label>Regional Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NSW2</fullName>
                </value>
                <value>
                    <fullName>WA / QLD</fullName>
                </value>
                <value>
                    <fullName>NSW1</fullName>
                </value>
                <value>
                    <fullName>SA / VIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RentReviewType__c</fullName>
        <label>Rent Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StandardReviewTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportedRentableArea__c</fullName>
        <label>Reported Rentable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportedUsableArea__c</fullName>
        <label>Reported Usable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RepresentationHordingExtra__c</fullName>
        <formula>&quot;, or any de-fitting of the premises at the expiration or determination of the lease&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Representation Hording Extra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetaiDesignRM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Drives reporting</description>
        <label>Retail Design RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RetailAdminRM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Admin RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RetailCommunicationsFooter__c</fullName>
        <description>Stores the footer for Commercial opportunities</description>
        <label>Retail Communications Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RetailTenantsGuide__c</fullName>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Retail Tenant&apos;s Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Retail_Admin__c</fullName>
        <description>RPP-10729
This determines who is/are the Retail Administrator/s responsible for the property record, this is mainly use for the reporting purpose due to the shared responsibility (1 or more Retail Administrator/s are responsible for the same property) as the Property Team record (Retail Administrator role) cannot be used to do the report/dashboard drill down.</description>
        <label>Retail Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollover_Year__c</fullName>
        <description>Field used in Conga Document (DS) to change the year value on documents based on financial rollover requirements.</description>
        <label>Rollover Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScentreGridDSPricingGuide__c</fullName>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>ScentreGrid DS/Pricing Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ServicesAndFacilities__c</fullName>
        <label>Services And Facilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ServicesAndFacilities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StandardPromoReviewType__c</fullName>
        <description>Promo Standard Review Types related to Property</description>
        <label>Standard Promo Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StandardReviewTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StoreroomLessorEntity__c</fullName>
        <description>This field is used to store concatenated Lessor Entity details for storerooms including the ABN(s).</description>
        <label>Storeroom Lessor Entity</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StoreroomLicenseSection17__c</fullName>
        <label>Storeroom License (Section 17)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StoreroomLicenseSection18__c</fullName>
        <label>Storeroom License (Section 18)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StoreroomLicenseSection19__c</fullName>
        <label>Storeroom License (Section 19)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SurrenderSolicitorThreshold__c</fullName>
        <label>Surrender Solicitor Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TECH_Retail_Design_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup will store the User Id of Retail Design Manager from Property Team</description>
        <label>TECH_Retail Design Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <externalId>true</externalId>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_ConcatenatedAccountACN__c</fullName>
        <label>Tech_ConcatenatedAccountACN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_ConcatenatedHoldingCompanyName__c</fullName>
        <label>Tech_ConcatenatedHoldingCompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenancyMix__c</fullName>
        <description>It&apos;s part of the proposal pack to be sent to retailer</description>
        <inlineHelpText>For use in Disclosure Statement Proposal Packs.</inlineHelpText>
        <label>Tenancy Mix</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                    <default>true</default>
                    <label>Tier 1</label>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TitleParticulars__c</fullName>
        <label>Title Particulars</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TotalOccupiedArea__c</fullName>
        <label>Total Occupied Area</label>
        <summarizedField>Space__c.RentableArea__c</summarizedField>
        <summaryFilterItems>
            <field>Space__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leased Spaces</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Space__c.OccupancyStatus__c</field>
            <operation>equals</operation>
            <value>2 - Leasing Issues, 3 - LBNT (Leased but not trading), 4 - Held Vacancies, 5 - Trading New Retailers, 7 - Holdovers, 9 - Trading</value>
        </summaryFilterItems>
        <summaryForeignKey>Space__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRentableArea__c</fullName>
        <label>Total Rentable Area</label>
        <summarizedField>Space__c.RentableArea__c</summarizedField>
        <summaryFilterItems>
            <field>Space__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leased Spaces</value>
        </summaryFilterItems>
        <summaryForeignKey>Space__c.Property__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TradingHoursEntLeisurePcnt__c</fullName>
        <description>Trading Hours (Entertainment &amp; Leisure Precinct)</description>
        <inlineHelpText>Trading Hours (Entertainment &amp; Leisure Precinct)</inlineHelpText>
        <label>Trading Hours (Ent. &amp; Leisure Pcnt)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TradingHoursInterchangeConcourse__c</fullName>
        <label>Trading Hours (Interchange Concourse)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TradingHoursRestaurantPrecinct__c</fullName>
        <label>Trading Hours (Restaurant Precinct)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TradingHoursRetailConcourse__c</fullName>
        <label>Trading Hours (Retail Concourse)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TradingHoursRetailInterchange__c</fullName>
        <label>Trading Hours (Retail Interchange)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Traffic_Count_Date__c</fullName>
        <label>Traffic Count Date</label>
        <type>Date</type>
    </fields>
</CustomObject>